--- a/goutils/Makefile
+++ b/goutils/Makefile
@@ -16,3 +16,22 @@ clean:
 	rm -rf GetTargetDrive.exe GetTargetDrive GetTargetDrive*.zip
 
 all: clean zip
+
+all: test vet fmt lint build
+
+test:
+    go test ./...
+
+vet:
+    go vet ./...
+
+fmt:
+    go list -f '{{.Dir}}' ./... | grep -v /vendor/ | xargs -L1 gofmt -l
+    test -z $$(go list -f '{{.Dir}}' ./... | grep -v /vendor/ | xargs -L1 gofmt -l)
+
+lint:
+    go list ./... | grep -v /vendor/ | xargs -L1 golint -set_exit_status
+
+build:
+    go build -o bin/api ./cmd/api
+    go build -o bin/worker ./cmd/worker
